# lastui

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs
src/commands/: dashboard.rs  mod.rs  recent_tracks.rs  search.rs
