[package]
name = "lastui"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", features = ["parse"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
urlencoding = "2"
