[package]
name = "lastui"
version = "0.2.0"
edition = "2024"
description = "Command line tool to access Last.fm api and commands"
license = "MIT"
repository = "https://github.com/kashsuks/lastui"
readme = "README.md"
keywords = ["cli", "terminal", "rust", "lastfm"]
categories = ["command-line-utilities"]

[dependencies]
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", features = ["parse"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
urlencoding = "2"
ratatui = "0.29"
crossterm = "0.28"
image = "0.25"
